@@ -13,7 +13,6 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -29,26 +28,15 @@ public class WebSecurityConfig {
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
                 .csrf(csrf -> csrf.disable())
-                .sessionManagement(sm -> sm.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .authorizeHttpRequests(auth -> auth
                         .requestMatchers(
-                                "/",                      // Trang chủ
-                                "/index",                // Trang index
-                                "/css/**",               // CSS
-                                "/js/**",                // JS
-                                "/images/**",            // Ảnh nếu có
-                                "/favicon.ico",          // Icon trình duyệt
-                                "/uploads/**"            // ✅ Cho phép truy cập ảnh tĩnh
+                                "/", "/index", "/css/**", "/js/**", "/images/**", "/favicon.ico", "/uploads/**", "/ws/**"
                         ).permitAll()
                         .requestMatchers(
                                 String.format("%s/auth/login", apiPrefix),
-                                String.format("%s/auth/register", apiPrefix),
-                                String.format("%s/login", apiPrefix),
-                                String.format("%s/profile", apiPrefix),
-                                String.format("%s/register", apiPrefix),
-                                String.format("%s/index", apiPrefix)
-
+                                String.format("%s/auth/register", apiPrefix)
                         ).permitAll()
                         .anyRequest().authenticated()
                 )
@@ -60,10 +48,10 @@ public class WebSecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(List.of("*"));
-        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
-        config.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
-        config.setExposedHeaders(List.of("Authorization"));
+        config.setAllowedOrigins(List.of("http://localhost:5173")); // Frontend URL
+        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        config.setAllowedHeaders(List.of("Authorization", "Content-Type"));
+        config.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
